--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Vite + React</title>
+    <title>Blog Platform</title>
   </head>
   <body class="bg-slate-200 text-slate-900">
     <div id="root"></div>
